fixed alignment for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,22 @@ a{
     .navalign{
         text-align: center;
     }
+    .imgalign{
+        margin-left: .5%;;
+        width: 100%;
+        padding: 10px; 
+    }
 }  
  @media only screen and (min-width: 576px){
 
     .navalign{
         text-align: center;
         
+    }
+    .imgalign{
+        margin-left: .5%;;
+        width: 100%;
+        padding: 10px;
     }
 } 
 @media only screen and (min-width: 768px) {
